# orm

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: export.rs  lib.rs
macros/src/api_type/: item_def.rs  mod.rs  parse.rs  registry.rs  valibot.rs  validate.rs  validator.rs
macros/src/endpoint/: mod.rs
macros/src/enum_type/: enum_def.rs  filter.rs  mod.rs  parse.rs  postgres.rs  registry.rs  schema.rs  serde.rs  typescript.rs
macros/src/json_type/: mod.rs  parse.rs  postgres.rs  registry.rs  schema.rs  struct_def.rs
macros/src/table_type/: crud.rs  from_row.rs  insert.rs  mod.rs  parse.rs  registry.rs  schema.rs  struct_def.rs  update.rs  validation.rs
macros/src/view_type/: crud.rs  from_row.rs  mod.rs  parse.rs  registry.rs  schema.rs  struct_def.rs
src/: backend.rs  cli.rs  client.rs  export.rs  lib.rs  registry.rs  style.rs  traits.rs  validate.rs  validator.rs
src/lang/: mod.rs
src/lang/ts/: backend.rs  client.rs  mod.rs  runtime.rs
src/lang/ts/validator/: mod.rs  valibot.rs
src/migrate/: database.rs  mod.rs  prompt.rs  store.rs
src/query/: builder.rs  mod.rs
src/schema/: diff.rs  introspect.rs  mod.rs  model.rs  registry.rs  sql.rs  sql_type.rs
src/seed/: mod.rs
tests/: db.rs  export.rs  migration.rs  query.rs  table_validate.rs  validator.rs
