[workspace]
members = ["macros"]
resolver = "3"

[package]
name = "orm"
version = "0.1.0"
edition = "2024"

[lib]
name = "orm"

[dependencies]
macros = { package = "macros", path = "macros" }
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
inventory = "0.3"
postgres-types = { version = "0.2", features = ["derive"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "net", "time"] }
tokio-postgres = { version = "0.7", features = [
  "with-chrono-0_4",
  "with-serde_json-1",
  "with-uuid-1"
] }
tracing = "0.1"
uuid = { version = "1.0", features = ["serde", "v4", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }
